# poly2

./: .gitignore  dune-project  poly2.opam  poly2.opam.locked
lib/: dune  eval.ml  expr.ml  expr.mli  id_supply.ml  id_supply.mli  infer.ml  infer.mli  lexer.mll  list_ext.ml  parse.ml  parse.mli  parser.mly  parser_tests.ml  pretty_tests.ml  simplify.ml  simplify.mli  type.ml  type.mli  type_intf.ml  type_intf.mli  util.ml  util.mli
test/: dune  infer.ml  pretty.ml  test_utils.ml
