(library
 (name poly2)
 (inline_tests)
 (flags (:standard -warn-error -A))
 (modules_without_implementation type_intf)
 (preprocess
   (pps
     ppx_jane
     ppx_compare
     ppx_deriving.show
     ppx_deriving.ord
     ppx_deriving.eq))
 (libraries core fmt))

(ocamllex lexer)

(menhir
  (modules parser))
